--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node dist",
+    "build": "babel src -s -D -d dist --presets es2015,stage-0"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,10 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "telegraf": "^4.5.2"
+    "telegraf": "^4.5.2",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0"
   }
 }
