--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "telegraf": "^4.5.2",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "node-telegram-bot-api": "^0.56.0",
+    "telegraf": "^4.5.2"
   }
 }
